[Mac][Material Design] Bring bookmark hover state,  etc. up to spec.

This cl brings the bookmark hover state appearance in various places,
the padding between buttons, and the layout of folder buttons within
folder menus up to spec.

R=avi@chromium.org
BUG=613279

Review-Url: https://codereview.chromium.org/2013523005
Cr-Commit-Position: refs/heads/master@{#396195}

Former-commit-id: dad117aa41824da2da9bf35b465c03de1ba23133