chrome/browser/ui/cocoa/gradient_button_cell.mm
@@ -513,12 +513,19 @@ static const NSTimeInterval kAnimationContinuousCycleDuration = 0.4;
   const CGFloat kLineWidth = [controlView cr_lineWidth];
   const CGFloat kHalfLineWidth = kLineWidth / 2.0;
 
-  NSRect drawFrame = cellFrame;
-  NSRect innerFrame = NSInsetRect(cellFrame, kLineWidth, kLineWidth);
+  NSRect drawFrame = NSZeroRect;
+  NSRect innerFrame = NSZeroRect;
   CGFloat cornerRadius = 2;
   if ([self tag] != kMaterialStandardButtonTypeWithLimitedClickFeedback) {
     drawFrame = NSInsetRect(cellFrame, 1.5 * kLineWidth, 1.5 * kLineWidth);
+    innerFrame = NSInsetRect(cellFrame, kLineWidth, kLineWidth);
     cornerRadius = 3;
+  } else {
+    drawFrame = cellFrame;
+    // Hover and click paths are always 20pt tall, regardless of the button's
+    // height.
+    drawFrame.size.height = 20;
+    innerFrame = NSInsetRect(drawFrame, kLineWidth, kLineWidth);
   }
 
   ButtonType type = [[(NSControl*)controlView cell] tag];
