chrome/browser/ui/cocoa/bookmarks/bookmark_bar_folder_button_cell_unittest.mm
@@ -65,7 +65,11 @@ TEST_F(BookmarkBarFolderButtonCellTest, FaviconPositioning) {
   float icon_x_with_title = ([cell imageRectForBounds:rect]).origin.x;
   float cell_width_with_title = ([cell cellSize]).width;
 
-  EXPECT_LT(icon_x_without_title, icon_x_with_title);
+  if (ui::MaterialDesignController::IsModeMaterial()) {
+    EXPECT_GT(icon_x_without_title, icon_x_with_title);
+  } else {
+    EXPECT_LT(icon_x_without_title, icon_x_with_title);
+  }
   EXPECT_LT(cell_width_without_title, cell_width_with_title);
 
   [folder_cell setBookmarkCellText:@"" image:image];
